fix layout on small screens, fix  responsivity, add browser support

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,8 @@ body {
   color: transparent;
   background-image: linear-gradient(to right, #f00, #ff0, #0f0, #00f);
   background-clip: text;
+  -webkit-background-clip: text;
+  -ms-background-clip: text;
   animation: gradient 10s linear infinite;
   background-size: 1000%;
   margin-bottom: 1em;
@@ -144,15 +146,7 @@ body {
   color: rgb(248, 248, 248);
 }
 
-.flexbox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 #header {
-  height: calc(100vh - 25em);
   margin-top: 10em;
   margin-bottom: 3em;
   text-align: center;
@@ -186,6 +180,8 @@ body {
   color: transparent;
   background-image: linear-gradient(to right, #f00, #ff0, #0f0, #00f);
   background-clip: text;
+  -webkit-background-clip: text;
+  -ms-background-clip: text;
   animation: gradient 10s linear infinite;
   background-size: 1000%;
 }
@@ -206,6 +202,7 @@ header h2 {
   color: #ffaaaa;
   font-size: 30px;
   margin-top: 2em;
+  margin-bottom: 35vh;
 }
 
 .links-top {
@@ -228,13 +225,14 @@ header a:hover {
 }
 
 main {
-  margin: 5em 0;
+  margin: 5em 10vw;
 }
 
 #projects {
   display: grid;
   grid-template-columns: 20vw 20vw 20vw;
   gap: 55px 55px;
+  justify-content: center;
 }
 
 .projects-title {
@@ -346,6 +344,8 @@ main {
   color: transparent;
   background-image: linear-gradient(to right, #f00, #ff0, #0f0, #00f);
   background-clip: text;
+  -webkit-background-clip: text;
+  -ms-background-clip: text;
   animation: gradient 10s linear infinite;
   background-size: 1000%;
 }
@@ -359,6 +359,8 @@ main {
   color: transparent;
   background-image: linear-gradient(to right, #f00, #ff0, #0f0, #00f);
   background-clip: text;
+  -webkit-background-clip: text;
+  -ms-background-clip: text;
   animation: gradient 10s linear infinite;
   background-size: 1000%;
 }
@@ -484,7 +486,7 @@ main {
   .project-card {
     min-height: 250px;
     max-height: 400px;
-    padding: 5px 15px;
+    padding: 5px 10px;
   }
   .project-card h2 {
     font-size: 1.2em;
@@ -517,5 +519,34 @@ main {
   }
   #bio p {
     font-size: 14px;
+  }
+  .project-card h2 {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 465px) {
+  body {
+    overflow-x: hidden;
+  }
+  #navbar {
+    margin: 30px 25px 0 25px;
+  }
+  #navbar h2 {
+    text-align: left;
+    font-size: 25px;
+    margin: 0;
+  }
+  #projects {
+    grid-template-columns: 70vw;
+    gap: 35px 35px;
+  }
+  .skills-icons {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 50px 50px;
+  }
+  .contact-icons {
+    gap: 2em;
   }
 }
